--- a/views/admin/articles/page.ejs
+++ b/views/admin/articles/page.ejs
@@ -23,12 +23,12 @@
                     <a style="float:left" href="/articles/page/<%= result.page - 1 %>">
                         <<< Prev</a>
                         <% } else if(result.page == 2) {%>
-                            <a style="float:left" href="/">
+                            <a class="btn btn-danger" style="float:left" href="/">
                             <<< Prev</a>
                             <% } %>
 
                             <% if(result.next) {%>
-                                <a style="float:right" href="/articles/page/<%= result.page + 1 %>">Next >>></a>
+                                <a class="btn btn-danger" style="float:right" href="/articles/page/<%= result.page + 1 %>">Next >>></a>
                                 <% } %>
             </div>
             <hr>
