--- a/views/admin/users/login.ejs
+++ b/views/admin/users/login.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
     <hr>
-    <div clas="card mt-5">
+    <div class="card mt-5 col-md-6 d-flex center mx-auto">
         <div class="card-header">
             <h2>Login de admin</h2>
         </div>
