--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,14 @@
 <body>
     <div class="container">
         <hr>
-        <div class="jumbotron">
-            <h1 class="display-4">Bem vindo</h1>
-            <p class="lead">Este é um simples blog feito pelos alunos da Fatec de Mogi Mirim.</p>
+        <div class="jumbotron rounded border border-secondary">
+            <h1 class="display-4"><b>Bem vindo!</b></h1>
+            <p class="lead">Este é um simples blog feito como trabalho avaliativo da disciplina de Programação de Scripts.</p>
+            <p><b>Desenvolvido por:</b></p>
+            <p>Altamir da Silva Junior</p>
+            <p>Carlos Acácio de Campos Júnior</p>
+            <p>João Vitor Silvestre da Silva</p>
             <hr class="my-4">
-            <p>Descrição detalhada aqui!"</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Leias Mais</a>
         </div>
         <hr>
         <% articles.forEach(article =>{ %>
@@ -18,7 +20,7 @@
                 <h2 class="mt-2 ml-4"><%= article.title %></h2>
             </div>
             <div class="card-body">
-                <a href="/<%= article.slug %>" class="btn btn-success">Ler artigo</a>
+                <a href="/<%= article.slug %>" class="btn btn-info">Ler artigo</a>
             </div>
         </div> 
         <br>
@@ -26,7 +28,7 @@
 
         <div class="row">
             <div class="col col-12">
-                <a style="float:right" href="/articles/page/2">Next >>></a>
+                <a class="btn btn-danger" style="float:right" href="/articles/page/2" >Next >>></a>
             </div>
             <hr>
         </div>
